# 42corewar

./: .gitignore  CMakeLists.txt  Makefile  README.md  author
Test_core/: Makefile  asm1  clear.sh  create_champs  create_champs.sh  create_wrong.sh  func_test.sh  func_test_not_valid.sh  hex.sh  vm
Test_core/check_wrong/: long_name.s  unknown_instruction.s  without_code.s  without_comment.s  without_name.s  wrong_argument.s  wrong_character_label.s  wrong_lexical.s  wrong_refer.s  wrong_type.s
Test_core/vm_champs/: 1.txt  asm1  clear.sh  create_champs.sh  func_test.sh
Test_core/vm_champs/champs_for_our_project/: 42.cor  Car.cor  bigzork.cor  jumper.cor  mortel.cor  toto.cor
Test_core/vm_champs/valid_champs_our/: barriere.cor  kamelkaze.cor  katchup.cor  tchupka.cor
asm/: Makefile  asm  kalle.s
asm/includes/: asm.h  config.h  error.h  op.h  utils.h
asm/src/: asm.c  debug.c  error.c  label.c  memfree.c  parser.c  parser_utils.c  process_arg.c  process_body.c  process_description.c  process_utils.c  token.c  utils.c  write_bytes.c
champion/: kalle.cor  nagibator228.cor  nagibator228.s
lib/: Makefile
lib/ft_printf/: adapt_charflags.c  adapt_gridflag.c  adapt_nbflags.c  bonus_functions.c  check_star.c  clear_create_flags.c  color.c  egflag_handler.c  finalstr.c  flags.c  ft_printf.c  ft_printf.h  grid_types.c  handle_numbers.c  handle_strings.c  ld_handler.c  ld_optimize.c  ld_precision.c  ld_round.c  ll_itoa_base.c  ll_itoa_base_func.c  llu_itoa_base.c  new_functions.c  parse_arguments.c  return_result.c  str_multiplier.c  type_checker.c  type_checker_func.c
lib/libft/: ft_atoi.c  ft_atoi32.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstaddlast.c  ft_lstcount.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstreverse.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_module.c  ft_nblen.c  ft_negativezero.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putstr_null.c  ft_strcat.c  (+35 more)
vm/: Makefile  args.c  calculations.c  champ_reader.c  champs_to_vm.c  corewar  cursor.c  cycles_to_die.c  error_handler.c  exec.c  game.c  game_2.c  game_3.c  init_structs.c  main.c  messages.c  options.c  output.c  reader.c  str_utils.c  vm  vs.c
vm/.run/: Unnamed.run.xml
vm/includes/: commands.h  corewar.h  errors.h  op.h
vm/op/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  op.h  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
