cmake_minimum_required(VERSION 3.17)
project(Core_War C)

set(CMAKE_C_STANDARD 11)

include_directories(asm/includes)
include_directories(lib/ft_printf)
include_directories(lib/libft)
include_directories(vm/includes)

add_executable(Core_War
#        asm/includes/asm.h
#        asm/includes/config.h
#        asm/includes/error.h
#        asm/includes/utils.h
#        asm/src/asm.c
#        asm/src/parser.c
#        asm/src/token.c
#        asm/src/utils.c
        lib/ft_printf/adapt_charflags.c
        lib/ft_printf/adapt_gridflag.c
        lib/ft_printf/adapt_nbflags.c
        lib/ft_printf/check_star.c
        lib/ft_printf/clear_create_flags.c
        lib/ft_printf/color.c
        lib/ft_printf/egflag_handler.c
        lib/ft_printf/finalstr.c
        lib/ft_printf/flags.c
        lib/ft_printf/ft_printf.c
        lib/ft_printf/ft_printf.h
        lib/ft_printf/grid_types.c
        lib/ft_printf/ld_handler.c
        lib/ft_printf/ld_optimize.c
        lib/ft_printf/ld_precision.c
        lib/ft_printf/ld_round.c
        lib/ft_printf/ll_itoa_base.c
        lib/ft_printf/ll_itoa_base_func.c
        lib/ft_printf/llu_itoa_base.c
        lib/ft_printf/new_functions.c
        lib/ft_printf/return_result.c
        lib/ft_printf/str_multiplier.c
        lib/ft_printf/type_checker.c
        lib/ft_printf/type_checker_func.c
        lib/libft/ft_atoi.c
        lib/libft/ft_bzero.c
        lib/libft/ft_isalnum.c
        lib/libft/ft_isalpha.c
        lib/libft/ft_isascii.c
        lib/libft/ft_isdigit.c
        lib/libft/ft_isprint.c
        lib/libft/ft_itoa.c
        lib/libft/ft_lstadd.c
        lib/libft/ft_lstaddlast.c
        lib/libft/ft_lstcount.c
        lib/libft/ft_lstdel.c
        lib/libft/ft_lstdelone.c
        lib/libft/ft_lstiter.c
        lib/libft/ft_lstmap.c
        lib/libft/ft_lstnew.c
        lib/libft/ft_lstreverse.c
        lib/libft/ft_memalloc.c
        lib/libft/ft_memccpy.c
        lib/libft/ft_memchr.c
        lib/libft/ft_memcmp.c
        lib/libft/ft_memcpy.c
        lib/libft/ft_memdel.c
        lib/libft/ft_memmove.c
        lib/libft/ft_memset.c
        lib/libft/ft_module.c
        lib/libft/ft_nblen.c
        lib/libft/ft_negativezero.c
        lib/libft/ft_putchar.c
        lib/libft/ft_putchar_fd.c
        lib/libft/ft_putendl.c
        lib/libft/ft_putendl_fd.c
        lib/libft/ft_putnbr.c
        lib/libft/ft_putnbr_fd.c
        lib/libft/ft_putstr.c
        lib/libft/ft_putstr_fd.c
        lib/libft/ft_putstr_null.c
        lib/libft/ft_strcat.c
        lib/libft/ft_strchr.c
        lib/libft/ft_strclr.c
        lib/libft/ft_strcmp.c
        lib/libft/ft_strcpy.c
        lib/libft/ft_strdel.c
        lib/libft/ft_strdup.c
        lib/libft/ft_strempty_symb.c
        lib/libft/ft_strequ.c
        lib/libft/ft_striter.c
        lib/libft/ft_striteri.c
        lib/libft/ft_strjoin.c
        lib/libft/ft_strlcat.c
        lib/libft/ft_strlen.c
        lib/libft/ft_strmap.c
        lib/libft/ft_strmapi.c
        lib/libft/ft_strncat.c
        lib/libft/ft_strncmp.c
        lib/libft/ft_strncpy.c
        lib/libft/ft_strndup.c
        lib/libft/ft_strnequ.c
        lib/libft/ft_strnew.c
        lib/libft/ft_strnstr.c
        lib/libft/ft_strrchr.c
        lib/libft/ft_strreverse.c
        lib/libft/ft_strsplit.c
        lib/libft/ft_strstr.c
        lib/libft/ft_strsub.c
        lib/libft/ft_strtrim.c
        lib/libft/ft_tolower.c
        lib/libft/ft_toupper.c
        lib/libft/get_next_line.c
        lib/libft/libft.h
        vm/includes/commands.h
        vm/includes/corewar.h
        vm/includes/errors.h
        vm/includes/op.h
        vm/op/add.c
        vm/op/aff.c
        vm/op/and.c
        vm/op/fork.c
        vm/op/ld.c
        vm/op/ldi.c
        vm/op/lfork.c
        vm/op/live.c
        vm/op/lld.c
        vm/op/lldi.c
        vm/op/or.c
        vm/op/st.c
        vm/op/sti.c
        vm/op/sub.c
        vm/op/xor.c
        vm/op/zjmp.c
        vm/args.c
        vm/calculations.c
        vm/champ_reader.c
        vm/champs_to_vm.c
        vm/cursor.c
        vm/cycles_to_die.c
        vm/error_handler.c
        vm/exec.c
        vm/game.c
        vm/game_2.c
        vm/init_structs.c
        vm/main.c
        vm/messages.c
        vm/output.c
        vm/str_utils.c
        vm/vs.c
        vm/game_3.c
        vm/options.c)
